force-app/main/default/objects/Equity__c/Equity__c.object-meta.xml
<CustomObject>
    <label>Equity</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Equities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>