force-app/main/default/objects/Equity__c/fields/GL_Account__c.field-meta.xml
<CustomField>
    <fullName>GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Account</label>
    <referenceTo>GL_Code__c</referenceTo>
    <relationshipLabel>Equities</relationshipLabel>
    <relationshipName>Equities</relationshipName>
    <type>Lookup</type>
</CustomField>