force-app/main/default/objects/Equity__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contribution</fullName>
                <default>true</default>
                <label>Contribution</label>
            </value>
            <value>
                <fullName>Draw</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>